feat:申报模块前后端、文件不同类型下载